--- a/src/index.html
+++ b/src/index.html
@@ -3,22 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Cat Search</title>
-    <link rel="stylesheet" href="styles.css" />
+    <title>Homework 10</title>
   </head>
   <body>
-    <div class="container">
-      <select class="breed-select"></select>
-      <p class="loader">Loading data, please wait...</p>
-      <p class="error">Oops! Something went wrong! Try reloading the page!</p>
-      <div class="cat-info">
-        <img alt="Cat" class="cat-image" />
-        <h2 class="cat-name"></h2>
-        <p class="cat-description"></p>
-        <p class="cat-temperament"></p>
-      </div>
-    </div>
-
+    <select class="breed-select"></select>
+    <p class="loader">Loading data, please wait...</p>
+    <p class="error">Oops! Something went wrong! Try reloading the page!</p>
+    <div class="cat-info"></div>
     <script src="index.js" type="module"></script>
   </body>
 </html>
